chore: refactor to java 21